# enterprise_data_retrieval

./: .gitignore  README.md  main.py  pyproject.toml  test.py
.opencode/: plan.md  review.md
enterprise_data_retrieval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  agentic_reasoning.py
src/chunking/: __init__.py  _caption_utils.py  cross_reference_resolver.py  docling_chunker.py  models.py  old.py  visual_enricher.py
src/extraction/: __init__.py  docling_extractor.py
src/ingestion/: __init__.py  ingestor.py
src/metadata/: __init__.py  image_processor.py  relationship_generator.py
src/multimodal_embeddings/: multimodal_embeddings.py
src/normalization/: __init__.py  docling_normalizer.py  formula_processor.py  hierarchy_builder.py  table_processor.py
src/retrieval/: __init__.py  embedding_pipeline.py  similarity.py
src/schemas/: __init__.py  chunks.py  document.py  elements.py  geometry.py  id_gen.py  metadata.py  relationships.py  single_chunk_schema_model.py
src/utils/: __init__.py  caption_extractor.py  config.py  file_io.py  instructor_api_response.py  logging.py
src/validation/: __init__.py  docling_validator.py  models.py
tests/: __init__.py  test_caption_extractor.py  test_cross_reference_resolver.py  test_embedding_pipeline.py  test_extraction.py  test_formula_processor.py  test_hierarchy.py  test_image_processor.py  test_ingestion.py  test_normalization.py  test_relationships.py  test_schemas.py  test_similarity.py  test_table_processor.py  test_utils.py  test_validation.py
