[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise_data_retrieval"
version = "0.1.0"
description = "Production-grade extraction and structured chunking pipeline for complex documents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    # Core extraction & data-model
    "docling>=2.0",
    "pydantic>=2.0",
    # File I/O & serialisation
    "orjson>=3.0",
    "pyarrow>=10.0",
    "pandas>=2.0",
    "numpy>=1.24",
    # PDF page-count helper (used before Docling)
    "pdfminer.six[image]",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]
